# nuwe-stripped

./: .gitattributes  .gitignore  CHANGES.md  Cargo.toml  README.md
assets/shaders/: basic_fragment.wgsl  time_animation.wgsl  uv_gradient.wgsl
src/: audio_midi_integration.rs  demo.rs  lib.rs  main.rs  shader_integration.rs
src/audio/: audio_analysis.rs  glicol_integration.rs  midi_handler.rs  mod.rs  synthesis.rs  ui.rs
src/compute/: mod.rs
src/core/: events.rs  graph.rs  mod.rs  resources.rs  tests.rs
src/input/: midi_advanced.rs  mod.rs  osc.rs
src/ml/: mod.rs  native.rs  workflow.rs
src/nodes/: effects.rs  fractal_shaders.rs  generators.rs  mod.rs  motion_capture.rs  outputs.rs  stream_diffusion.rs  ui.rs  utilities.rs  vst3_plugins.rs
src/visual/: effects.rs  mod.rs  post_processing.rs  shader_loader.rs
tests/: integration_tests.rs
