[package]
name = "nuwe_rust"
version = "0.1.0"
edition = "2021"
description = "NUWE-Rust: Node-based immersive audio-visual performance system"
authors = ["Kapil"]
license = "MIT"
repository = "https://github.com/vdmo/nuwe-rust"
homepage = "https://github.com/vdmo/nuwe-rust"
keywords = ["audio", "visual", "vj", "real-time"]
categories = ["multimedia::audio", "multimedia::images", "science"]

[dependencies]
# Core engine
bevy = "0.17"

# UI and graphics
bevy_egui = { version = "0.38", optional = true }
egui_tiles = { version = "0.10", optional = true }

# Serialization and data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typetag = "0.2"
ron = "0.10"

# Math and utilities
rand = "0.8.5"
glam = "0.29"
rand_distr = "0.4.3"

# Graph algorithms
petgraph = "0.6"

# Audio processing and synthesis
cpal = "0.15"
rustfft = "6.1"
glicol = "0.13"

# MIDI support
midir = "0.9"

# Shader development
wgpu = "26.0"
naga = "26.0"

# Networking
futures = "0.3"
futures-util = "0.3"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Performance and debugging
tracing = "0.1"
tracing-subscriber = "0.3"

# Additional utilities
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.21"
chrono = { version = "0.4", features = ["serde"] }
noise = "0.9"
obj = "0.10"
gltf = "1.4"

[features]
default = ["ui"]
ui = ["bevy_egui", "egui_tiles"]
